Home page modification. Fixed the mis-aligned contents in the home page. Adjustment og the content widths, margins, and so on.

--- a/hypster/Areas/apps/css/appSite05.css
+++ b/hypster/Areas/apps/css/appSite05.css
@@ -1,7 +1,9 @@
-﻿﻿/* SCROLLBARS SETTINGS */
+﻿/* SCROLLBARS SETTINGS */
 /*----------------------------------------------*/
 
 @import url(http://fonts.googleapis.com/css?family=Lato:300,900);
+
+
 
 html
 {
@@ -3145,7 +3147,7 @@ a:visited
 {
 	float:left; width:100%; height:53px;
 	overflow:hidden;
-	margin:5px 0 0 0;
+	margin:11px 0 0 0;
 }
 
 
@@ -3343,7 +3345,7 @@ a:visited
 
 
 #sortablePlaylist { list-style-type:none; margin: 0; padding: 0; float:left; width:100%; margin-bottom:8px; }    
-#sortablePlaylist .srt_itm { float:left; width:98%; height:57px; background-color:#FFFFFF; color:#000000; cursor:pointer; overflow:hidden; margin-top:4px; }
+#sortablePlaylist .srt_itm { float:left; width:95%; height:57px; background-color:#FFFFFF; color:#000000; cursor:pointer; overflow:hidden; margin-top:4px; }
 
 
 
@@ -7177,7 +7179,6 @@ a.captionOrange:hover
     float:left; width:90px; height:50px; text-align:center; float:left; font-size:24px; color:#FFFFFF; font-family:'Lato', sans-serif; font-weight:300; letter-spacing:-1px; margin:0px 20px 0 0; cursor:pointer;
     display:none;
 }
-
 #MainMenu #mCreateSM1
 {
     display:none; position:relative; width:120px; height:53px; top:16px; left:0px;
@@ -7187,43 +7188,48 @@ a.captionOrange:hover
     border-radius:7px;
     padding:0 7px 0 7px;
 }
-
 #MainMenu #mPlayerSM1
 {
     float:right; font-size:18px; color:#d5af55; font-family:'Lato', sans-serif; font-weight:300; letter-spacing:-1px; margin:3px 0 0 0; cursor:pointer;
     width:100%; border-bottom:1px solid #000000; background-color:#FFFFFF;
 }
-
+/*
+#MainMenu #mPlaylistsSM1
+{
+    float:right; font-size:18px; color:#d5af55; font-family:'Lato', sans-serif; font-weight:300; letter-spacing:-1px; margin:0px 0 0 0; cursor:pointer;
+    width:100%; background-color:#FFFFFF;
+}*/
 #MainMenu #mPlstsSM1
 {
     float:right; font-size:18px; color:#d5af55; font-family:'Lato', sans-serif; font-weight:300; letter-spacing:-1px; margin:2px 0 0 0; cursor:pointer;
     width:100%; background-color:#FFFFFF;
 }
 
+
+
+
 #MainMenu .mBreaking
 {
-    float:left; width:100px; height:40px; text-align:center; float:left; font-size:24px; color:#FFFFFF; font-family:'Lato', sans-serif; font-weight:300; letter-spacing:-1px; cursor:pointer;
+    float:left; width:130px; height:40px; text-align:center; float:left; font-size:24px; color:#FFFFFF; font-family:'Lato', sans-serif; font-weight:300; letter-spacing:-1px; margin:0px 20px 0 0; cursor:pointer;
     display:none;
 }
 
 #MainMenu .mGamehype
 {
-    float:left; width:130px; height:40px; text-align:center; float:left; font-size:24px; color:#FFFFFF; font-family:'Lato', sans-serif; font-weight:300; letter-spacing:-1px; cursor:pointer;
+    float:left; width:130px; height:40px; text-align:center; float:left; font-size:24px; color:#FFFFFF; font-family:'Lato', sans-serif; font-weight:300; letter-spacing:-1px; margin:0px 20px 0 0; cursor:pointer;
     display:none;
 }
 
 
 #MainMenu .mAcct
 {
-    float:left; width:30px; height:45px; background:url('/imgs/account/acct_icon_t.png') no-repeat; margin:0 0 0 15px; cursor:pointer;
+    float:left; width:30px; height:45px; background:url('/imgs/account/acct_icon_t.png') no-repeat; margin:0 0 0 10px; cursor:pointer;
     display:none;
 }
-
 #MainMenu .mAcctNL
 {
     float:left; width:30px; height:45px; background:url('/imgs/account/acct_icon_t.png') no-repeat; margin:0 0 0 10px; cursor:pointer;
 }
-
 #MainMenu #mAcctMCH1
 {
     display:none; position:relative; width:140px; height:53px; top:45px; left:-70px;
@@ -7402,12 +7408,13 @@ a.captionOrange:hover
 /*-------------------------------------------------------------------------------------------------------------------------------*/
 .homePopRStations
 {
-    float:left; width:100%; height:370px; margin:auto; overflow:hidden;
+    float:left; width:100%; height:370px; margin:auto; padding:15px 0 0 0;
+    overflow:hidden;
 }
 
 .homeBreakingWidget
 {
-    float:left; width:735px; height:710px; margin:auto;
+    float:left; width:100%; height:710px; margin:auto;
 }
 
 .homeGamehype
@@ -7426,7 +7433,7 @@ a.captionOrange:hover
 
 .hmRdoTitle
 {
-    float:left; width:100%; height:45px; line-height:45px; border-bottom:2px solid #18ae7b; color:#000000; font-size:28px; text-align:left; cursor:pointer;
+    float:right; width:95%; height:45px; line-height:45px; border-bottom:2px solid #18ae7b; color:#000000; font-size:28px; text-align:left; cursor:pointer;
 }
 
 .FeaturedVideoInner
@@ -7505,7 +7512,7 @@ a.captionOrange:hover
 
 .breakingMCH_Home .hmBrkTitle
 {
-    float:left; width:100%; height:45px; line-height:45px; border-bottom:2px solid #18ae7b; color:#000000; font-size:28px; text-align:left; cursor:pointer;
+    float:right; width:95%; height:45px; line-height:45px; border-bottom:2px solid #18ae7b; color:#000000; font-size:28px; text-align:left; cursor:pointer;
 }
 
 
@@ -7552,22 +7559,26 @@ a.captionOrange:hover
 
 .breakingMCH_Home .brkngItmPost
 {
-    float:left; width:195px; height:110px; margin:1px 0 0 1px; background-repeat:no-repeat;
+    float:left; width:292px; height:204px; margin:4px 0 0 4px;
+     background-repeat:no-repeat;
 }
 
 .breakingMCH_Home .brkngItm .txtBreakingT
 {
-    float:left; width:194px; height:25px; line-height:25px; color:#000000; margin:-40px 0 0 4px; 
-    padding:1px; font-size:24px; text-align:center; overflow:hidden; font-weight:bold; 
-    margin:-37px 0 0 0; background-color:#FFFFFF; opacity:0.6; overflow:hidden;
+    float:left; width:290px; height:38px; line-height:38px; color:#000000; 
+    margin:-40px 0 0 4px; padding:1px; font-size:24px; text-align:center; overflow:hidden;
+    font-weight:bold;
+    background-color:#FFFFFF; opacity:0.6;
+    overflow:hidden;
 }
 
 
 .breakingMCH_Home .brkngItm .txtBreakingD
 {
-    float:left; width:185px; height:108px; line-height:16px; color:#000000; 
+    float:left; width:290px; height:65px; line-height:16px; color:#000000; 
     margin:0px 0 0 4px; padding:1px; font-size:14px; text-align:left; overflow:hidden;
-    background-color:#e7e8e7; overflow:hidden; padding:5px;
+    background-color:#e7e8e7;
+    overflow:hidden;
 }
 
 
@@ -7592,7 +7603,7 @@ a.captionOrange:hover
 
 .gamehypeMCH_Home .hmGmHTitle
 {
-    float:left; width:100%; height:45px; line-height:45px; margin:30px 0 0 0; border-bottom:2px solid #18ae7b; color:#000000; font-size:28px; text-align:left;
+    float:right; width:95%; height:45px; line-height:45px; margin:30px 0 0 0; border-bottom:2px solid #18ae7b; color:#000000; font-size:28px; text-align:left;
     cursor:pointer;
 }
 
@@ -7603,7 +7614,8 @@ a.captionOrange:hover
 
 .gamehypeMCH_Home .GmhItemsCont div
 {
-    float:left; margin:3px 0 0 0; cursor:pointer; width:182px;
+    float:left; margin:3px 0 0 3px; cursor:pointer;
+    width:40%;
 }
 
 .gamehypeMCH_Home .GmhItemsCont span
@@ -8027,6 +8039,14 @@ a.captionOrange:hover
     float:left; width:100%; height:45px; margin:0 0 0 0;
     background-size:160%;
 }
+
+
+
+.sld1_middleCont
+{
+    float:left; width:100%;
+}
+
 
 .crtMCh1 #CreateSection1_ST2
 {
